[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Authentication.gd" type="Script" id=2]
[ext_resource path="res://HTTPRequest.gd" type="Script" id=3]

[node name="Main" type="Node2D"]

[node name="Game" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Game"]
margin_left = 447.276
margin_top = 283.0
margin_right = 569.276
margin_bottom = 323.0
tab_size = 8
text = "This is the game"

[node name="Authentication" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="Authentication"]
script = ExtResource( 3 )

[node name="TextEdit" type="TextEdit" parent="Authentication"]
margin_left = 379.0
margin_top = 299.0
margin_right = 630.0
margin_bottom = 321.0
wrap_enabled = true

[node name="EnterYourCD" type="RichTextLabel" parent="Authentication"]
margin_left = 441.928
margin_top = 270.392
margin_right = 565.928
margin_bottom = 291.392
text = "Enter your CD key"

[node name="Status" type="RichTextLabel" parent="Authentication"]
margin_left = 370.0
margin_top = 332.0
margin_right = 639.0
margin_bottom = 353.0
bbcode_enabled = true

[node name="Activate" type="Button" parent="Authentication"]
margin_left = 648.684
margin_top = 297.85
margin_right = 704.684
margin_bottom = 317.85
text = "Activate"
[connection signal="YouShallPass" from="Authentication" to="Game" method="_on_Authentication_YouShallPass"]
[connection signal="request_completed" from="Authentication/HTTPRequest" to="Authentication" method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="Authentication/TextEdit" to="Authentication" method="_on_TextEdit_text_changed"]
[connection signal="button_down" from="Authentication/Activate" to="Authentication" method="_on_Activate_button_down"]
